--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Samarkan';
-    src: url('assets/fonts/Samarkan.ttf') format('truetype');
+    src: url('fonts/SamarkanOblique-BXew.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
